removing dell logo's

--- a/ClientApp/src/app/counter/counter.component.html
+++ b/ClientApp/src/app/counter/counter.component.html
@@ -13,7 +13,7 @@
     
 
     <div class="text-component " data-emptytext="Edit Text">
-        <h2>Dell Industry</h2>
+        <h2>Industry</h2>
 
     </div>
 
