--- a/ClientApp/src/app/fetch-data/fetch-data.component.html
+++ b/ClientApp/src/app/fetch-data/fetch-data.component.html
@@ -30,7 +30,7 @@
     
 
     <div class="text-component " data-emptytext="Edit Text">
-        <h2 style="text-align: center;">Dell services</h2>
+        <h2 style="text-align: center;">Services</h2>
 
     </div>
 
