--- a/ClientApp/src/app/home/home.component.html
+++ b/ClientApp/src/app/home/home.component.html
@@ -1,8 +1,8 @@
-<h1> Dotnet+Angular App</h1>
+<h1> Dotnet+Angular App - Edit Version</h1>
 <p>  </p>
 
-<div> 
-	<img style="width:100%;" src="dotnetdocker.png">
+<div>
+  <img style="width:100%;" src="dotnetdocker.png">
 </div>
 
 <p>&nbsp;</p>
@@ -10,9 +10,9 @@
 <hr>
 
 <div class="container">
-	<div class="col-sm-4" style="text-align=center;"><img  src="docker.png"></div>
-	<div class="col-sm-4" style="text-align=center;"><img  src="angular.png"></div>
-	<div class="col-sm-4" style="text-align=center;"><img  src="dotnet.png"></div>
+  <div class="col-sm-4" style="text-align=center;"><img src="docker.png"></div>
+  <div class="col-sm-4" style="text-align=center;"><img src="angular.png"></div>
+  <div class="col-sm-4" style="text-align=center;"><img src="dotnet.png"></div>
 
 
 </div>
